--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,10 @@
       <img src="images/globe_bw_v3.png" alt="Globe" width="200px">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a href="https://michaelerb.github.io/da-workshop/" class="btn">Home</a>
-      <a href="https://michaelerb.github.io/da-workshop/schedule" class="btn">Schedule</a>
-      <a href="https://michaelerb.github.io/da-workshop/faqs" class="btn">FAQs</a>
-      <a href="https://michaelerb.github.io/da-workshop/organizers" class="btn">Organizers</a>
-      <a href="https://michaelerb.github.io/da-workshop/apply" class="btn">Apply</a>
+      <a href="https://michaelerb.github.io/da-outreach/" class="btn">Home</a>
+      <a href="https://michaelerb.github.io/da-outreach/lessons" class="btn">Lessons</a>
+      <a href="https://michaelerb.github.io/da-outreach/activities" class="btn">Activities</a>
+      <a href="https://michaelerb.github.io/da-outreach/about" class="btn">About</a>
     </header>
 
     <main id="content" class="main-content" role="main">
